--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "angularfire2": "^5.4.2",
+    "angularfire2": "^5.0.0-rc.9",
     "firebase": "^8.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
